# django-ui-widgets

./: .gitignore  README.md  deploy.cmd  fields.py  forms.py  mixins.py  setup.cfg  setup.py  widgets.py
static/js/: auto_url_input.js
templates/forms/widgets/: dynamic_multi_select.html  image_picker.html
ui/: fields.py  forms.py
ui/static/js/: dynamic_select.js  json_field.js
ui/static/style/: json_field.css
ui/templates/forms/widgets/: auto_url.html  date.html  dynamic_multi_select.html  dynamic_select.html  image_picker.html  time.html
ui/widgets/: __init__.py  json.py  select.py  times.py
ui_widgets/: forms.py  mixins.py  tests.py  widgets.py
ui_widgets/templates/forms/widgets/: default_attrs.html  image_picker.html
