[metadata]
name = django-ui-widgets
version = 1.01b
description = Django ui widgets library
long_description = file: README.MD
author = Sanshain
author_email = digital-mag@ya.ru
url = https://github.com/Sanshain/django-ui-widgets
license = AGPL
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: AGPL License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.5
install_requires =
    Django >= 2.2
    sqlparse >= 0.2.0
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests.*

[flake8]
extend-ignore = E203, E501

[isort]
combine_as_imports = true
profile = black